--- a/plugin.xml
+++ b/plugin.xml
@@ -33,46 +33,48 @@
         <source-file src="src/android/PolyphonicVoice.java" target-dir="src/com/rjfun/cordova/plugin" />
 
         <!-- Downloader Library -->
-        <source-file src="src/android/downloader/Constants.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderConstants.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/DownloaderClientMarshaller.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderDownloaderClientMarshaller.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/DownloaderServiceMarshaller.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderDownloaderServiceMarshaller.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/DownloadProgressInfo.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderDownloadProgressInfo.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/Helpers.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderHelpers.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/IDownloaderClient.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderIDownloaderClient.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/IDownloaderService.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderIDownloaderService.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/IStub.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderIStub.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/SystemFacade.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderSystemFacade.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/AndroidHttpClient.java"
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderFakeR.java"
                      target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/CustomIntentService.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/CustomNotificationFactory.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/DownloaderService.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/DownloadInfo.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/DownloadNotification.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/DownloadsDB.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/DownloadThread.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/HttpDateTime.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/V3CustomNotification.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
-        <source-file src="src/android/downloader/impl/V14CustomNotification.java"
-                     target-dir="src/com/google/android/vending/expansion/downloader" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/AndroidHttpClient.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/CustomIntentService.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/CustomNotificationFactory.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/DownloaderService.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/DownloadInfo.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/DownloadNotification.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/DownloadsDB.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/DownloadThread.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/HttpDateTime.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/V3CustomNotification.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
+        <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloaderimpl/V14CustomNotification.java"
+                     target-dir="src/com/google/android/vending/expansion/downloader/impl" />
 
         <!-- APK Expansion Zip Library -->
         <source-file src="src/android/zipfile/APEZProvider.java"
@@ -119,6 +121,46 @@
                      target-dir="src/com/google/android/vending/expansion/licensing" />
         <source-file src="src/android/licensing/util/Base64.java"
                      target-dir="src/com/google/android/vending/expansion/licensing" />
+
+        <config-file target="res/values/strings.xml" parent="/resources">
+            <!-- When a download completes, a notification is displayed, and this
+               string is used to indicate that the download successfully completed.
+               Note that such a download could have been initiated by a variety of
+               applications, including (but not limited to) the browser, an email
+               application, a content marketplace. -->
+            <string name="notification_download_complete">Download complete</string>
+
+            <!-- When a download completes, a notification is displayed, and this
+                string is used to indicate that the download failed.
+                Note that such a download could have been initiated by a variety of
+                applications, including (but not limited to) the browser, an email
+                application, a content marketplace. -->
+            <string name="notification_download_failed">Download unsuccessful</string>
+
+
+            <string name="state_unknown">Starting..."</string>
+            <string name="state_idle">Waiting for download to start</string>
+            <string name="state_fetching_url">Looking for resources to download</string>
+            <string name="state_connecting">Connecting to the download server</string>
+            <string name="state_downloading">Downloading resources</string>
+            <string name="state_completed">Download finished</string>
+            <string name="state_paused_network_unavailable">Download paused because no network is available</string>
+            <string name="state_paused_network_setup_failure">Download paused. Test a website in browser</string>
+            <string name="state_paused_by_request">Download paused</string>
+            <string name="state_paused_wifi_unavailable">Download paused because wifi is unavailable</string>
+            <string name="state_paused_wifi_disabled">Download paused because wifi is disabled</string>
+            <string name="state_paused_roaming">Download paused because you are roaming</string>
+            <string name="state_paused_sdcard_unavailable">Download paused because the external storage is unavailable</string>
+            <string name="state_failed_unlicensed">Download failed because you may not have purchased this app</string>
+            <string name="state_failed_fetching_url">Download failed because the resources could not be found</string>
+            <string name="state_failed_sdcard_full">Download failed because the external storage is full</string>
+            <string name="state_failed_cancelled">Download cancelled</string>
+            <string name="state_failed">Download failed</string>
+
+            <string name="kilobytes_per_second">%1$s KB/s</string>
+            <string name="time_remaining">Time remaining: %1$s</string>
+            <string name="time_remaining_notification">%1$s left</string>
+        </config-file>
         
      </platform>
      
