--- a/plugin.xml
+++ b/plugin.xml
@@ -22,6 +22,7 @@
         <config-file target="res/xml/config.xml" parent="/*">
             <feature name="LowLatencyAudio">
                 <param name="android-package" value="com.rjfun.cordova.plugin.LowLatencyAudio"/>
+                <param name="onload" value="true" />
             </feature>
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/*">
