Add plugin to Copy

--- a/plugin.xml
+++ b/plugin.xml
@@ -32,6 +32,8 @@
         <source-file src="src/android/LowLatencyAudio.java" target-dir="src/com/rjfun/cordova/plugin" />
         <source-file src="src/android/LowLatencyAudioAsset.java" target-dir="src/com/rjfun/cordova/plugin" />
         <source-file src="src/android/PolyphonicVoice.java" target-dir="src/com/rjfun/cordova/plugin" />
+        <source-file src="src/android/LowLatencyDownloaderService.java" target-dir="src/com/rjfun/cordova/plugin" />
+        <source-file src="src/android/LowLatacyAudioSystemAlarmReceiver.java" target-dir="src/com/rjfun/cordova/plugin" />
 
         <!-- Downloader Library -->
         <source-file src="src/android/downloader/src/com/google/android/vending/expansion/downloader/Constants.java"
