--- a/plugin.xml
+++ b/plugin.xml
@@ -28,10 +28,10 @@
         <config-file target="AndroidManifest.xml" parent="/*">
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         </config-file>
-        <config-file target="AndroidManifest.xml" parent="/application">
+        <config-file target="AndroidManifest.xml" parent="/manifest/application">
             <activity android:label="@string/share_name" android:name="com.rjfun.cordova.plugin.LowLatencyAudioDownloaderActivity">
                 <intent-filter>
-                    <action android:name="android.intent.action.VIEW" />
+                    <action android:name="android.intent.action.MAIN" />
                     <category android:name="android.intent.category.DEFAULT" />
                 </intent-filter>
             </activity>
