--- a/plugin.xml
+++ b/plugin.xml
@@ -35,6 +35,17 @@
                     <category android:name="android.intent.category.DEFAULT" />
                 </intent-filter>
             </activity>
+            <!--
+             In order to start the service, it must be uniquely registered with
+             the package manager here.
+            -->
+            <service android:name="com.rjfun.cordova.plugin.LowLatencyDownloaderService" />
+
+            <!--
+             In order for the alarm manager to contact the downloader script, the receiver
+             must be uniquely registered with the package manager here.
+            -->
+            <receiver android:name="com.rjfun.cordova.plugin.LowLatacyAudioSystemAlarmReceiver" />
         </config-file>
 
         <source-file src="src/android/LowLatencyAudio.java" target-dir="src/com/rjfun/cordova/plugin" />
@@ -172,6 +183,18 @@
             <string name="kilobytes_per_second">%1$s KB/s</string>
             <string name="time_remaining">Time remaining: %1$s</string>
             <string name="time_remaining_notification">%1$s left</string>
+
+            <string name="text_paused_cellular">Would you like to enable downloading over cellular connections? Depending on your data plan, this may cost you money.</string>
+            <string name="text_paused_cellular_2">If you choose not to enable downloading over cellular connections, the download will automatically resume when wi-fi is available.</string>
+            <string name="text_button_resume_cellular">Resume download</string>
+            <string name="text_button_wifi_settings">Wi-Fi settings</string>
+            <string name="text_verifying_download">Verifying Download</string>
+            <string name="text_validation_complete">XAPK File Validation Complete.  Select OK to exit.</string>
+            <string name="text_validation_failed">XAPK File Validation Failed.</string>
+            <string name="text_button_pause">Pause Download</string>
+            <string name="text_button_resume">Resume Download</string>
+            <string name="text_button_cancel">Cancel</string>
+            <string name="text_button_cancel_verify">Cancel Verification</string>
         </config-file>
         
      </platform>
