Fix plugin file

--- a/plugin.xml
+++ b/plugin.xml
@@ -29,9 +29,9 @@
             <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
         </config-file>
         <config-file target="AndroidManifest.xml" parent="/manifest/application">
-            <activity android:label="@string/share_name" android:name="com.rjfun.cordova.plugin.LowLatencyAudio.VIEW">
+            <activity android:label="@string/share_name" android:name="com.rjfun.cordova.plugin.LowLatencyAudioDownloaderActivity">
                 <intent-filter>
-                    <action android:name="android.intent.action.MAIN" />
+                    <action android:name="com.rjfun.cordova.plugin.LowLatencyAudio.VIEW" />
                     <category android:name="android.intent.category.DEFAULT" />
                 </intent-filter>
             </activity>
